# diminishing-returns

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/: CHANGELOG.md  CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: README.md  deep-research-rubric.md  devils-advocate.md  livefire-log-schema.md  livefire-scenarios.md  novelty-and-readiness-spec.md  references.md  roadmap.md  rubric.md  tldr.md
docs/research/: README.md  diminishing-returns-academic-research-2026-02-10.md  rpo-academic-research-2026-02-10.md
examples/: README.md  chinese-room.md  meeting-stop.md  ship-of-theseus.md  trace.chinese-room.jsonl  trace.example.jsonl  trace.meeting-stop.jsonl  trace.ship-of-theseus.jsonl  transcript.chinese-room.expected.json  transcript.chinese-room.json  transcript.example.json  transcript.meeting-stop.expected.json  transcript.meeting-stop.json  transcript.ship-of-theseus.expected.json  transcript.ship-of-theseus.json
examples/calibration/: README.md  blocker-present.json  exact-repeat.json  high-novelty-high-readiness.json  high-novelty-low-readiness.json  low-novelty-high-readiness-blocked.json  low-novelty-high-readiness.json  low-novelty-low-readiness.json  paraphrase-rounds.json  question-accumulation.json
examples/livefire/: README.md  transcript.D1-stale-readme.json  transcript.D2-api-docs-drift.json  transcript.E1-db-migration.json  transcript.E4-flaky-test.json  transcript.I1-support-triage.json  (+7 more)
spec/: attestation.v0.1.md  transcript.v0.1.schema.json
src/dr/: io.py  (+4 more)
tests/: conftest.py  test_score.py  test_semantic.py
(+3 files in other folders)
