[project]
name = "diminishing-returns"
version = "0.0.0"
description = "Diminishing returns meter for multi-agent / multi-LLM conversations (stop/ship signal, not confidence)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "John Malone"}]

[project.scripts]
dr = "dr.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
